# d3_js_dioxus

./: CLAUDE.md  Cargo.toml  README.md
assets/: d3_core.js  d3_delaunay.js
d3_wrapper/: Cargo.toml
d3_wrapper/assets/: d3_delaunay.js
d3_wrapper/src/: core.rs  delaunay.rs  lib.rs
example/: Cargo.toml  style.css
example/src/: main.rs
