[package]
name = "d3_delaunay_example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dioxus = { workspace = true }
d3_wrapper = { path = "../d3_wrapper" }
dioxus-logger = "0.7"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[[bin]]
name = "example"
path = "src/main.rs"
